--- a/CourseraClone.vcxproj.filters
+++ b/CourseraClone.vcxproj.filters
@@ -82,7 +82,7 @@
     <ClInclude Include="Headers\Entities\Actividad.hpp">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
-    <ClInclude Include="Headers\Entities\Boleta.hpp">
+    <ClInclude Include="Headers\Entities\ComprobanteDePago.hpp">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
     <ClInclude Include="Headers\Entities\Clase.hpp">
@@ -163,7 +163,7 @@
     <ClInclude Include="Headers\Persistence\InscripcionTypes.hpp">
       <Filter>Header Files\Persistence</Filter>
     </ClInclude>
-    <ClInclude Include="Headers\Persistence\BoletaTypes.hpp">
+    <ClInclude Include="Headers\Persistence\ComprobanteDePagoTypes.hpp">
       <Filter>Header Files\Persistence</Filter>
     </ClInclude>
     <ClInclude Include="Headers\Utils\DataPaths.hpp">
