--- a/CourseraClone.vcxproj.filters
+++ b/CourseraClone.vcxproj.filters
@@ -200,5 +200,11 @@
     <ClInclude Include="Headers\Utils\ValidationUtils.hpp">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Headers\DataStructures\NodoAVL.hpp">
+      <Filter>Header Files\DataStructures</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\DataStructures\ArbolAVL.hpp">
+      <Filter>Header Files\DataStructures</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
