Implementada la pantalla Sobre Nosotros

--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Headers\Controllers\InscripcionesController.hpp" />
     <ClInclude Include="Headers\DataStructures\ArbolAVL.hpp" />
     <ClInclude Include="Headers\DataStructures\NodoAVL.hpp" />
+    <ClInclude Include="Headers\Screens\SobreNosotrosScreen.hpp" />
     <ClInclude Include="Headers\Types\ActividadTypes.hpp" />
     <ClInclude Include="Headers\Types\ComprobanteDePagoTypes.hpp" />
     <ClInclude Include="Headers\Controllers\FilesManager.hpp" />
