--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -166,10 +166,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="Resources\Documentation\Correccion_Nombre_Real_Certificados.md" />
     <None Include="Resources\Documentation\Ejemplo_Practico_QR.md" />
     <None Include="Resources\Documentation\Entendiendo el proyecto.md" />
     <None Include="Resources\Documentation\Formato_JSON_Estandar.md" />
     <None Include="Resources\Documentation\Guia de Estilo de Codigo.md" />
+    <None Include="Resources\Documentation\Implementacion_QR_Certificados.md" />
     <None Include="Resources\Documentation\Integracion_QR_Datos_Reales.md" />
     <None Include="Resources\Documentation\Optimizaciones_QR.md" />
     <None Include="Resources\Documentation\Paleta de Colores Coursera.md" />
