--- a/CourseraClone.vcxproj.filters
+++ b/CourseraClone.vcxproj.filters
@@ -77,6 +77,9 @@
     <None Include="Resources\Documentation\Formato_JSON_Estandar.md" />
     <None Include="Resources\Documentation\Ejemplo_Practico_QR.md" />
     <None Include="Resources\Documentation\Optimizaciones_QR.md" />
+    <None Include="Resources\Documentation\Correccion_Nombre_Real_Certificados.md" />
+    <None Include="Resources\Documentation\Implementacion_QR_Certificados.md" />
+    <None Include="Resources\Documentation\Integracion_QR_Datos_Reales.md" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\Controllers\ContentManager.hpp">
@@ -297,6 +300,9 @@
     </ClInclude>
     <ClInclude Include="Headers\Utils\QR\AutocontainedQR.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\Entities\Certificado.hpp">
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
