--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Headers\Entities\Curso.hpp" />
     <ClInclude Include="Headers\Entities\Empresa.hpp" />
     <ClInclude Include="Headers\Entities\Especializacion.hpp" />
+    <ClInclude Include="Headers\Entities\Estadistica.hpp" />
     <ClInclude Include="Headers\Entities\Estudiante.hpp" />
     <ClInclude Include="Headers\Entities\Inscripcion.hpp" />
     <ClInclude Include="Headers\Entities\Usuario.hpp" />
